Admin _sidenav fixed so that the Beallitasok on the bottom always displays correctly on mobile devices

--- a/assets/css/admin/bootstrap-theme/_sidenav.scss
+++ b/assets/css/admin/bootstrap-theme/_sidenav.scss
@@ -30,7 +30,7 @@
 
 .left-side-menu {
   width: 100%;
-  height: calc(100vh - 50px);
+  height: 100%;
   border-right: 1px solid $gray-400;
   padding: .5rem;
   overflow-y: scroll;
